VNC-151 Set z-index for overlay elements to ensure proper stacking order

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -366,16 +366,6 @@ select:active {
   display: flex;
 }
 
-#noVNC_fps_chart {
-  top: 40px;
-  left: auto;
-  right: 0;
-  position: fixed;
-  background: #9fa5a2d4;
-  visibility: hidden;
-  display: flex;
-}
-
 /* ----------------------------------------
  * Control Bar
  * ----------------------------------------
